# prema-inbox-triage-ai

./: .env.example  .gitignore  DEPLOYMENT.md  GMAIL_OAUTH_SETUP.md  LICENSE  MOCK_VS_REAL.md  README.md  check_credentials.py  debug_gmail.py  get_gmail_token.py  get_refresh_token.py  pyproject.toml  requirements.txt  streamlit_app.py
app/: main.py  seed_db.py
app/api/: deps.py
app/api/routes/: config.py  emails.py  health.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: email.py
app/providers/email/: base.py  decorators.py  gmail.py
app/providers/llm/: base.py  openai_client.py
app/repositories/: email_repository.py
app/schemas/: email.py  providers.py
app/services/: classification_service.py  ingestion_service.py  reply_service.py  send_service.py
app/ui/: views.py
app/ui/static/: script.js  styles.css
app/ui/templates/: base.html  dashboard.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: EmailCard.tsx  Icons.tsx  Toast.tsx
frontend/src/context/: ToastContext.tsx
frontend/src/services/: api.ts
frontend/src/types/: email.ts
tests/e2e/: CURSOR_IDE.md  README.md  __init__.py  conftest.py  list_tests.py  test_api_endpoints.py  test_integration_workflows.py  test_ui_dashboard.py
tests/services/: test_classification_service.py  test_ingestion_service.py
